# Nmap Changelog ($Id$); -*-text-*-

o [Zenmap] Upgraded to the newer gtk.Tooltip API to avoid deprecation
  messages about gtk.Tooltip. [Rob Nicholls]

o Updated the Windows build to work with (and require):
  o Visual C++ 2010 (was 2008)
  o Python 2.7
  o GTK+ 2.22
  See docs/win32-zenmap-build-guide.txt for details. Thanks to KX for
  Visual C++ instructions. [David, Rob Nicholls]

o [NSE] Added a new library upnp that provides UPnP support to the scripts
  upnp-info and broadcast-upnp-info. The library is largely based on code
  taken from Thomas Buchanan's upnp-info script. [Patrik]

o [NSE] Added a new library dnssd with supporting functions for DNS Service
  Discovery. Moved multicast prerule from dns-service-discovery to a new
  script called broadcast-dns-service-discovery. [Patrik]

o [NSE] Added the rmi-dumpregistry script, which shows the contents of
  Java RMI registry. [Martin Holst Swende]

o [NSE] Added the ssh2-enum-algos script which reports the number of
  algorithms the target SSH2 server supports, by type. If verbosity
  is set, then the offered algorithms are listed. Output is reduced
  for identical "client to server" and "server to client" lists by
  using a single combined list. [Kris]

o [NSE] Made dns-zone-transfer script able to add new discovered DNS
  records onto Nmap scanning queue. [Djalal]

o [NSE] Added reporting of the type and bit size of certificate public
  keys to ssl-cert.nse. [Matt Selsky]

o [NSE] Added the db2-discover script. This can find DB2 servers by
  sending a UDP broadcast. [Patrik]

o [NSE] Added the hostmap script by Ange Gutek. This uses a third-party
  database to look up other hostnames mapping to the target.

o [NSE] Added the ability to send and receive on unconnected sockets.
  This can be used, for example, to receive UDP broadcasts without
  using pcap. A number of scripts have been changed so that they can
  work as prerule scripts to discover services by UDP broadcasting,